# pyric-static

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-06-pyric-static-import-time-filter.md  2026-07-06-pyric-static-transfer-import.md
docs/superpowers/specs/: 2026-07-06-pyric-static-import-time-filter-design.md  2026-07-06-pyric-static-transfer-import-design.md
src/pyric_static/: __init__.py  cli.py  config.py  dsdl.py  flatten.py  import_app.py  influx.py  logger_app.py  metrics.py  reassembly.py  sources.py  transfer_schema.py  transfers.py
tests/: test_cli.py  test_config.py  test_dsdl.py  test_flatten.py  test_import_app.py  test_influx_import.py  test_metrics.py  test_reassembly.py  test_transfer_schema.py  test_transfers.py  transfer_fixtures.py
