[project]
name = "pyric-static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lasse Fröhner", email = "lasse@starcopter.com" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[project.scripts]
pyric-static = "pyric_static:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
