[project]
name = "pyric-static"
version = "0.1.0"
description = "Passive Cyphal/CAN-to-InfluxDB logger (pyric influx-logger without a node)"
readme = "README.md"
authors = [
    { name = "Lasse Fröhner", email = "lasse@starcopter.com" }
]
requires-python = ">=3.14"
dependencies = [
    "influxdb-client>=1.50.0",
    "pyarrow>=19",
    "pycyphal>=1.27.0",
    "python-can>=4",
]

[dependency-groups]
dev = [
    "cyphal-device-library",
    "prek>=0.3.9",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[project.scripts]
pyric-static = "pyric_static:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.src]
exclude = ["tests/**"]

[tool.uv.sources]
cyphal-device-library = { git = "ssh://git@github.com/starcopter/cyphal-device-library.git" }
